Writing through "Five Things" section

--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -28,56 +28,24 @@ The U.S. Constitution's First Amendment protects lies, hate speech, and nonsense
 
 However, that doesn't mean lies, hate speech, and nonsense should be anyone's business model.
 
+- Bitcoin.com fundraiser: https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/
+
 -->
 
 ### Five Things: Sept. 7-13, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-<!--
+- **The Ethereum Foundation announced a plan** for implementing end-to-end privacy on the organization's namesake blockchain network. The new roadmap includes advancements in Layer-2 solutions, private remote procedure calls, and confidential decentralized finance (DeFi) protocols to enhance Ethereum's role in settling global financial transactions. ([The Block](https://www.theblock.co/post/370532/ethereum-foundation-sets-end-to-end-privacy-roadmap-with-private-writes-reads-and-proving))
 
-AI prompt for drafting early news summaries...
+- **Publicly listed SharpLink Gaming,** a major holder of ether tokens, began a [$1.5 billion share buyback](https://www.theblock.co/post/370046/ethereum-treasury-sharplink-initiates-1-5-billion-share-repurchase-program-says-below-nav-buying-is-immediately-accretive). The program could have a major ripple effect on crypto markets as traders arbitrage the stock-market valuation of SharpLink versus the ETH token price. But Wall Street estimates [vary widely](https://finance.yahoo.com/news/sharplink-gaming-sbet-buyback-plan-120217635.html) as to where the equilibrium lies.
 
-I'm thinking of using the news article in this browser tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize this story in a paragraph of 1-2 sentences, written in a style that I could use for my newsletter? Do not include a headline.
+- **Nasdaq has proposed a rule change** to U.S. securities regulators that would allow tokenized versions of listed stocks and exchange-traded funds (ETFs) to trade alongside their traditional counterparts. If approved, the change would introduce blockchain-based settlement to America's national market system, which is used by millions of investors everyday. ([The Block](https://www.theblock.co/post/369814/nasdaq-seeks-sec-nod-to-trade-tokenized-securities-alongside-traditional-stocks))
 
--->
+- **OpenAI is facing growing opposition** from California's regulators and philanthropic groups over its plan to restructure as a for-profit company. Critics are concerned the move could violate the state's charitable trust law and prioritize profit over OpenAI's mission to create AI for the public benefit. ([Wall Street Journal](https://www.wsj.com/tech/ai/openai-for-profit-conversion-opposition-07ea7e25?st=8bUDUb&reflink=desktopwebshare_permalink))
 
-- Robinhood added to S&P 500, but Strategy is snubbed. ([]()) <!-- Links TK --> | Bernstein is bullish: https://www.theblock.co/post/369995/robinhood-upside-sp-500-tokenization | CBOE looking to add continuous bitcoin, eth futures: https://www.theblock.co/post/370033/cboe-to-list-continuous-bitcoin-and-ether-futures | Daioly bitcoin ETF inflows hit one-month high on Monday: https://decrypt.co/338613/bitcoin-etfs-draw-in-368m-showing-strongest-demand-since-august
+- **AlterEgo, a Boston startup,** has unveiled what it calls a "near-telepathic" wearable device that enables users to communicate silently with computers by detecting faint neuromuscular signals in the face and throat when a person internally verbalizes words." ([Decrypt](https://decrypt.co/338527/near-telepathic-wearable-communicate-silently-devices)) 
 
-- Kazakhstan is weighing a possible sovereign crypto fund: https://decrypt.co/338595/kazakhstan-president-wants-state-digital-asset-fund-crypto-payments-in-smart-city
-
-- Linea launch ([]()) <!-- Links TK -->
-
-- Bloomberg Crypto: https://www.youtube.com/results?search_query=bloomberg+crypto
-
-- New Google blockchain aims to compete with XRP: https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen
-
-- Eightco's meteoric rise to an $8.5 billion valuation: https://www.barrons.com/articles/eightco-worldcoin-dan-ives-crypto-strategy-19f77bdf
-
-- How Trump came around on crypto: https://www.bloomberg.com/news/articles/2025-09-08/how-bitcoin-ether-are-rallying-as-trump-embraces-crypto <!-- See if you can find a hosted, non-paywalled version of this. -->
-
-- 80% of ransomware attacks now involve AI: https://mitsloan.mit.edu/ideas-made-to-matter/80-ransomware-attacks-now-use-artificial-intelligence
-
-- CA teen is becoming the "Greta Thundberg of AI." https://www.latimes.com/politics/newsletter/2025-09-08/chabria-monday-politics-newsletter-ai-artificial-intelligence-sb-53
-
-- New DOGE ETF goes live <!-- Link TK -->
-
-- Travel platforms are worried about AI agents. https://www.ft.com/content/4d1acaff-07e4-4739-9ea4-5c6cba553e74 <!-- Sub out Google News referral link -->
-
-- Nasdaq makes strategic investment in Gemini: https://www.theblock.co/post/369989/nasdaq-gemini-investment | https://finance.yahoo.com/news/exclusive-winklevoss-founded-crypto-exchange-090622770.html
-
-- Sharplink has begun a $1.5 billion share repurchase: https://www.theblock.co/post/370046/ethereum-treasury-sharplink-initiates-1-5-billion-share-repurchase-program-says-below-nav-buying-is-immediately-accretive
-
-
-- **Nasdaq has filed a rule change with the SEC** to allow tokenized versions of listed stocks and ETFs to trade on the same order book as their traditional counterparts, potentially bringing blockchain-based settlement to the national market system. The proposal aims to balance tokenization with investor protections, setting a higher bar for equivalence to the underlying stock and addressing concerns about overseas platforms that market tokenized U.S. equities without conferring shareholder rights. ([The Block](https://www.theblock.co/post/369814/nasdaq-seeks-sec-nod-to-trade-tokenized-securities-alongside-traditional-stocks)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Senate Dems laid out their proposals for crypto regulation: https://thehill.com/policy/technology/5492926-senate-democrats-lay-out-framework-for-crypto-market-structure-bill/ | https://www.theblock.co/post/370018/senate-democrats-crypto-market-structure-framework
-
-- **CoinShares**, a European crypto asset manager, is set to go public in the US via a $1.2 billion SPAC merger with Nasdaq-listed Vine Hill, positioning it as one of the largest publicly traded digital asset managers globally. This move is expected to fuel CoinShares' international expansion and enable US investors to participate in its global growth, with the firm aiming to capitalize on stronger valuations and a favorable regulatory environment. ([The Block](https://www.theblock.co/post/369821/coinshares-set-to-go-public-in-us-via-1-2-billion-spac-merger-with-nasdaq-listed-vine-hill)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- OpenAI is facing growing opposition from California's regulators and philanthropic groups over its plan to restructure as a for-profit company, with concerns that the move could violate the state's charitable trust law and prioritize profits over its mission to create AI for the public benefit. The company's leaders are discussing a last-ditch option of relocating out of California if regulators complicate the transition, but OpenAI has stated it has no plans to leave the state. ([Wall Street Journal](https://www.wsj.com/tech/ai/openai-for-profit-conversion-opposition-07ea7e25?st=8bUDUb&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- AlterEgo, a Boston startup, has unveiled a wearable device that enables users to communicate silently with computers by detecting faint neuromuscular signals in the face and throat when a person internally verbalizes words. This non-invasive AI interface, described as a "near-telepathic" interface, has the potential to revolutionize how people interact with artificial intelligence systems and connected devices without the need for keyboards, touchscreens, or spoken voice. ([Decrypt](https://decrypt.co/338527/near-telepathic-wearable-communicate-silently-devices)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -129,9 +97,6 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
      <td>-0.025</td>
      <td>-0.512</td>
    </tr>
-
-
-
 
 </tbody>
 </table>
