--- a/2025/2025-09-21-wir.md
+++ b/2025/2025-09-21-wir.md
@@ -30,8 +30,32 @@ Some leftover notes, links from last week...
 
 **Sub sandwiches have emerged as an unlikely symbol** of resistance to the militarization of Washington's streets by the Trump administration. ([BuzzFeed](https://www.yahoo.com/news/articles/donald-trump-definitely-not-going-185636150.html))
 
--->   
+- Robinhood added to S&P 500, but Strategy is snubbed. Bernstein is bullish: https://www.theblock.co/post/369995/robinhood-upside-sp-500-tokenization | CBOE looking to add continuous bitcoin, eth futures: https://www.theblock.co/post/370033/cboe-to-list-continuous-bitcoin-and-ether-futures | Daioly bitcoin ETF inflows hit one-month high on Monday: https://decrypt.co/338613/bitcoin-etfs-draw-in-368m-showing-strongest-demand-since-august
 
+- Kazakhstan is weighing a possible sovereign crypto fund: https://decrypt.co/338595/kazakhstan-president-wants-state-digital-asset-fund-crypto-payments-in-smart-city
+
+- Linea launch ([]()) <!-- Links TK
+
+- Bloomberg Crypto: https://www.youtube.com/results?search_query=bloomberg+crypto
+
+- New Google blockchain aims to compete with XRP: https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen
+
+- Eightco's meteoric rise to an $8.5 billion valuation: https://www.barrons.com/articles/eightco-worldcoin-dan-ives-crypto-strategy-19f77bdf
+
+- How Trump came around on crypto: https://www.bloomberg.com/news/articles/2025-09-08/how-bitcoin-ether-are-rallying-as-trump-embraces-crypto <!-- See if you can find a hosted, non-paywalled version of this.
+
+- 80% of ransomware attacks now involve AI: https://mitsloan.mit.edu/ideas-made-to-matter/80-ransomware-attacks-now-use-artificial-intelligence
+
+- CA teen is becoming the "Greta Thundberg of AI." https://www.latimes.com/politics/newsletter/2025-09-08/chabria-monday-politics-newsletter-ai-artificial-intelligence-sb-53
+
+- New DOGE ETF goes live <!-- Link TK
+
+
+- Nasdaq makes strategic investment in Gemini: https://www.theblock.co/post/369989/nasdaq-gemini-investment | https://finance.yahoo.com/news/exclusive-winklevoss-founded-crypto-exchange-090622770.html
+
+- Senate Dems laid out their proposals for crypto regulation: https://thehill.com/policy/technology/5492926-senate-democrats-lay-out-framework-for-crypto-market-structure-bill/ | https://www.theblock.co/post/370018/senate-democrats-crypto-market-structure-framework
+
+- **CoinShares**, a European crypto asset manager, is set to go public in the US via a $1.2 billion SPAC merger with Nasdaq-listed Vine Hill, positioning it as one of the largest publicly traded digital asset managers globally. This move is expected to fuel CoinShares' international expansion and enable US investors to participate in its global growth, with the firm aiming to capitalize on stronger valuations and a favorable regulatory environment. ([The Block](https://www.theblock.co/post/369821/coinshares-set-to-go-public-in-us-via-1-2-billion-spac-merger-with-nasdaq-listed-vine-hill)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 
 ### Five Things: Sept. 14-20, 2025
@@ -102,9 +126,9 @@ Some leftover notes, links from last week...
 
 - tk
 
-- tk
+- Travel platforms are worried about AI agents. https://www.ft.com/content/4d1acaff-07e4-4739-9ea4-5c6cba553e74 <!-- Sub out Google News referral link -->
 
-
+- In order to survive, web3 must embrace web2. ([Cointelegraph](https://cointelegraph.com/news/web3-rely-on-web2))
 
 ### Odds & Ends
 
