--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -1,8 +1,11 @@
 # TK
 ## TK
 
-![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
-*Photo illustration by Mae Wu via Unsplash*
+![](https://w3w.news/img/kirk2000.jpg)
+*Charlie Kirk speaking at the 2025 Student Action Summit in Tampa, Fla. Unedited photo by Gage Skidmore via Wikimedia Commons under Creative Commons [license](https://creativecommons.org/licenses/by-sa/4.0/).*
+
+
+<!--
 
 <hr>
 
@@ -14,19 +17,51 @@
 
 <hr>
 
+-->
+
+
+**The tragic death of far-right activist Charlie Kirk** on Wednesday has to be the most "extremely online" political assassination in U.S. history.
+
+Vox Media's excellent tech podcast Pivot [used that distinctive phrase](https://www.youtube.com/watch?v=Z9_SOe7tBm4) to describe the suspect arrested in connection with Kirk's shooting. The hosts referred to the 22-year-old suspect's alleged use of internet memes, Discord messaging, and gaming platforms, as well as the likelihood he was radicalized on the internet.
+
+OK. But I think we could take things even a few notches further.
+
+Kirk himself grew his massive following entirely online, including through a [podcast](https://www.charliekirk.com/) and social posts that often exhibited an [incendiary tone](https://www.theguardian.com/us-news/2025/sep/11/charlie-kirk-quotes-beliefs) of their own. The young people who turned out to see Kirk in person Wednesday no doubt connected with his content online. And to the extent that politicians have said some needlessly provocative things since Kirk's death, those messages are primarily spreading online, [risking further escalation](https://www.youtube.com/watch?v=o-1RgoatdDs) of political violence elsewhere in the U.S.
+
+In other words, we've never really seen an event quite like this. And it raises some very tech-specific questions we need to wrestle with.
+
+For instance: What sort of internet do we really want to build, together? And how do we make that vision happen, even in spite of Big Tech profiteering and other interests that work against actual users?
+
+Believe it or not, I still hold hope it's possible to create some version of the internet that's a more constructive force for its users, and for society at large. But we have to be very intentional about it, in at least equal measure to the intentionality of the people who have made the shitty parts, the social networks that have become utter cesspools, and so on.
+
+Frankly, I disagreed with a lot of what Charlie Kirk had to say. But that's OK. In America, we should be able to disagree without anyone getting shot. It absolutely sickens me that Charlie Kirk was, and I hope we'll make whatever changes necessary so it never happens to anyone else.
+
+_**Bitcoin.com is doing a crypto fundraiser for Charlie Kirk's family. They're taking donations in seven different tokens, in recognition of Charlie's enthusiasm for crypto during his lifetime and the profound loss his wife and children have recently suffered. If you're able, please [donate here](https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/).**_
+
+
+
+
+
+
+
+
 <!--
 
-**The tragic death of activist and podcaster Charlie Kirk** is the most online political assassination in U.S. history.
 
 That adjective . "very online"
 
 Kirk built his following online, through podcasting and social networks. And the young people who went to hear him speak in person no doubt found him online.
 
-People who still get their news from traditional sources like could be forgiven for having no clue who he was until he burst into the news TKTKTK.
 
 The U.S. Constitution's First Amendment protects lies, hate speech, and nonsense.** Count me among the people who think that's ultimately a *good* thing, ugly though such stuff is to encounter in day-to-day life, as it ultimately helps protect more socially beneficial forms of expression as well.
 
 However, that doesn't mean lies, hate speech, and nonsense should be anyone's business model.
+
+- Pivot: https://www.youtube.com/watch?v=Z9_SOe7tBm4&pp=ygUYcGl2b3Qgc3dpc2hlciBzY290dCBraXJr
+
+- Excellent Bulwark episode: https://www.youtube.com/watch?v=o-1RgoatdDs
+
+- Last Bulwark episode: https://www.charliekirk.com/podcasts/what-does-phillies-karen-say-about-american-men
 
 - Bitcoin.com fundraiser: https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/
 
@@ -44,7 +79,7 @@ However, that doesn't mean lies, hate speech, and nonsense should be anyone's bu
 
 - **OpenAI is facing growing opposition** from California's regulators and philanthropic groups over its plan to restructure as a for-profit company. Critics are concerned the move could violate the state's charitable trust law and prioritize profit over OpenAI's mission to create AI for the public benefit. ([Wall Street Journal](https://www.wsj.com/tech/ai/openai-for-profit-conversion-opposition-07ea7e25?st=8bUDUb&reflink=desktopwebshare_permalink))
 
-- **AlterEgo, a Boston startup,** has unveiled what it calls a "near-telepathic" wearable device that enables users to communicate silently with computers by detecting faint neuromuscular signals in the face and throat when a person internally verbalizes words." ([Decrypt](https://decrypt.co/338527/near-telepathic-wearable-communicate-silently-devices)) 
+- **AlterEgo, a Boston startup,** has unveiled what it calls a "near-telepathic" wearable device that enables users to communicate silently with computers by detecting faint neuromuscular signals in the face and throat when a person internally verbalizes words." ([Decrypt](https://decrypt.co/338527/near-telepathic-wearable-communicate-silently-devices))
 
 
 ### Market Snapshot
