Adding headline + subhed by ChatGPT

--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -22,7 +22,7 @@
 
 **The tragic death of far-right activist Charlie Kirk** on Wednesday has to be the most "extremely online" political assassination in U.S. history.
 
-Vox Media's excellent tech podcast Pivot [used that distinctive phrase](https://www.youtube.com/watch?v=Z9_SOe7tBm4) to describe the suspect arrested in connection with Kirk's shooting. The hosts referred to the 22-year-old suspect's alleged use of internet memes, Discord messaging, and gaming platforms, as well as the likelihood he was radicalized on the internet.
+Vox Media's excellent tech podcast Pivot [used that colorful phrase](https://www.youtube.com/watch?v=Z9_SOe7tBm4) to describe the suspect arrested in connection with Kirk's shooting. The hosts referred to the 22-year-old suspect's alleged use of internet memes, Discord messaging, and gaming platforms, as well as the likelihood he was radicalized on the internet.
 
 OK. But I think we could take things even a few notches further.
 
@@ -32,40 +32,11 @@ In other words, we've never really seen an event quite like this. And it raises 
 
 For instance: What sort of internet do we really want to build, together? And how do we make that vision happen, even in spite of Big Tech profiteering and other interests that work against actual users?
 
-Believe it or not, I still hold hope it's possible to create some version of the internet that's a more constructive force for its users, and for society at large. But we have to be very intentional about it, in at least equal measure to the intentionality of the people who have made the shitty parts, the social networks that have become utter cesspools, and so on.
+Believe it or not, I still hold out hope it's possible to create some version of the internet that's a more constructive force for its users, and for society at large. But we have to be very intentional about it, in at least equal measure to the intentionality of the people who have made the shitty parts, the social networks that have become utter cesspools, and so on.
 
-Frankly, I disagreed with a lot of what Charlie Kirk had to say. But that's OK. In America, we should be able to disagree without anyone getting shot. It absolutely sickens me that Charlie Kirk was, and I hope we'll make whatever changes necessary so it never happens to anyone else.
+Frankly, I disagreed with a lot of what Charlie Kirk had to say in life. But that's OK. In America, we should be able to disagree without anyone getting shot. It absolutely sickens me that Charlie Kirk was, and I hope we'll make whatever changes necessary so it never happens to anyone else, regardless of their politics, ever again.
 
-_**Bitcoin.com is doing a crypto fundraiser for Charlie Kirk's family. They're taking donations in seven different tokens, in recognition of Charlie's enthusiasm for crypto during his lifetime and the profound loss his wife and children have recently suffered. If you're able, please [donate here](https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/).**_
-
-
-
-
-
-
-
-
-<!--
-
-
-That adjective . "very online"
-
-Kirk built his following online, through podcasting and social networks. And the young people who went to hear him speak in person no doubt found him online.
-
-
-The U.S. Constitution's First Amendment protects lies, hate speech, and nonsense.** Count me among the people who think that's ultimately a *good* thing, ugly though such stuff is to encounter in day-to-day life, as it ultimately helps protect more socially beneficial forms of expression as well.
-
-However, that doesn't mean lies, hate speech, and nonsense should be anyone's business model.
-
-- Pivot: https://www.youtube.com/watch?v=Z9_SOe7tBm4&pp=ygUYcGl2b3Qgc3dpc2hlciBzY290dCBraXJr
-
-- Excellent Bulwark episode: https://www.youtube.com/watch?v=o-1RgoatdDs
-
-- Last Bulwark episode: https://www.charliekirk.com/podcasts/what-does-phillies-karen-say-about-american-men
-
-- Bitcoin.com fundraiser: https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/
-
--->
+_**Bitcoin.com is doing a crypto fundraiser for Charlie Kirk's family. They're taking donations in seven different tokens, in recognition of both Charlie's enthusiasm for crypto during his lifetime and the profound loss his wife and children have recently suffered. If you're able, please [donate here](https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/).**_
 
 ### Five Things: Sept. 7-13, 2025
 
