--- a/2025/2025-09-14-wir.md
+++ b/2025/2025-09-14-wir.md
@@ -1,9 +1,8 @@
-# TK
-## TK
+# Charlie Kirk’s Death and the Internet We’ve Built
+## Kirk’s assassination marks a grim turning point, underscoring the stakes of Big Tech’s choices and our own.
 
-![](https://w3w.news/img/kirk2000.jpg)
+![Charlie Kirk with a microphone, speaking onstage at a conference](https://w3w.news/img/kirk2000.jpg)
 *Charlie Kirk speaking at the 2025 Student Action Summit in Tampa, Fla. Unedited photo by Gage Skidmore via Wikimedia Commons under Creative Commons [license](https://creativecommons.org/licenses/by-sa/4.0/).*
-
 
 **The tragic death of far-right activist Charlie Kirk** on Wednesday has to be the most "extremely online" political assassination in U.S. history.
 
@@ -19,7 +18,9 @@ For instance: What sort of internet do we really want to build, together? And ho
 
 Believe it or not, I still hold out hope it's possible to create some version of the internet that's a more constructive force for its users, and for society at large. But we have to be very intentional about it, in at least equal measure to the intentionality of the people who have made the shitty parts, the social networks that have become utter cesspools, and so on.
 
-Frankly, I disagreed with a lot of what Charlie Kirk had to say in life. But that's OK. In America, we should be able to disagree without anyone getting shot. It absolutely sickens me that Charlie Kirk was, and I hope we'll make whatever changes necessary so it never happens to anyone else, regardless of their politics, ever again.
+Frankly, I deeply disagree with a lot of what Charlie Kirk had to say in life. But that's OK.
+
+In America, we should be able to disagree without anyone getting shot. It absolutely sickens me that Charlie Kirk was, and I hope we'll make whatever changes necessary so it never happens to anyone else, regardless of their politics, ever again.
 
 _**Bitcoin.com is doing a crypto fundraiser for Charlie Kirk's family. They're taking donations in seven different tokens, in recognition of both Charlie's enthusiasm for crypto during his lifetime and the profound loss his wife and children have recently suffered. If you're able, please [donate here](https://www.bitcoin.com/charlie-kirk-bitcoin-fundraiser/).**_
 
