--- a/2025/2025-09-21-wir.md
+++ b/2025/2025-09-21-wir.md
@@ -1,5 +1,5 @@
-# TK
-## TK
+# TKTK
+## TKTK
 
 ![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
 *Photo illustration by Mae Wu via Unsplash*
