Drafting lead item

--- a/2025/2025-09-21-wir.md
+++ b/2025/2025-09-21-wir.md
@@ -18,6 +18,8 @@
 
 <!--
 
+Emerging tech for the rest.
+
 Some leftover notes, links from last week...
 
 - NYT Douthat/Bannon intvu. Why do Bannon and Andreessen agree about feds wanting a consolidated tech sector? ([]()) <!-- Link TK
@@ -32,7 +34,6 @@ Some leftover notes, links from last week...
 
 - Robinhood added to S&P 500, but Strategy is snubbed. Bernstein is bullish: https://www.theblock.co/post/369995/robinhood-upside-sp-500-tokenization | CBOE looking to add continuous bitcoin, eth futures: https://www.theblock.co/post/370033/cboe-to-list-continuous-bitcoin-and-ether-futures | Daioly bitcoin ETF inflows hit one-month high on Monday: https://decrypt.co/338613/bitcoin-etfs-draw-in-368m-showing-strongest-demand-since-august
 
-- Kazakhstan is weighing a possible sovereign crypto fund: https://decrypt.co/338595/kazakhstan-president-wants-state-digital-asset-fund-crypto-payments-in-smart-city
 
 - Linea launch ([]()) <!-- Links TK
 
@@ -40,7 +41,6 @@ Some leftover notes, links from last week...
 
 - New Google blockchain aims to compete with XRP: https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen
 
-- Eightco's meteoric rise to an $8.5 billion valuation: https://www.barrons.com/articles/eightco-worldcoin-dan-ives-crypto-strategy-19f77bdf
 
 - How Trump came around on crypto: https://www.bloomberg.com/news/articles/2025-09-08/how-bitcoin-ether-are-rallying-as-trump-embraces-crypto <!-- See if you can find a hosted, non-paywalled version of this.
 
@@ -55,18 +55,33 @@ Some leftover notes, links from last week...
 
 - Senate Dems laid out their proposals for crypto regulation: https://thehill.com/policy/technology/5492926-senate-democrats-lay-out-framework-for-crypto-market-structure-bill/ | https://www.theblock.co/post/370018/senate-democrats-crypto-market-structure-framework
 
-- **CoinShares**, a European crypto asset manager, is set to go public in the US via a $1.2 billion SPAC merger with Nasdaq-listed Vine Hill, positioning it as one of the largest publicly traded digital asset managers globally. This move is expected to fuel CoinShares' international expansion and enable US investors to participate in its global growth, with the firm aiming to capitalize on stronger valuations and a favorable regulatory environment. ([The Block](https://www.theblock.co/post/369821/coinshares-set-to-go-public-in-us-via-1-2-billion-spac-merger-with-nasdaq-listed-vine-hill)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
+-->
 
 ### Five Things: Sept. 14-20, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- tk
-- tk
-- tk
-- tk
-- tk
+- The Ethereum Foundation created a new team for agentic AI payments. <!-- Link TK --> | Google launched agentic payments
+- Kazakhstan is weighing a possible sovereign crypto fund: https://decrypt.co/338595/kazakhstan-president-wants-state-digital-asset-fund-crypto-payments-in-smart-city
+- Eightco's meteoric rise to an $8.5 billion valuation: https://www.barrons.com/articles/eightco-worldcoin-dan-ives-crypto-strategy-19f77bdf
+- **CoinShares**, a European crypto asset manager, is set to go public in the US via a $1.2 billion SPAC merger with Nasdaq-listed Vine Hill, positioning it as one of the largest publicly traded digital asset managers globally. This move is expected to fuel CoinShares' international expansion and enable US investors to participate in its global growth, with the firm aiming to capitalize on stronger valuations and a favorable regulatory environment. ([The Block](https://www.theblock.co/post/369821/coinshares-set-to-go-public-in-us-via-1-2-billion-spac-merger-with-nasdaq-listed-vine-hill)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- ETH community launches a new security challenge: https://www.theblock.co/post/370846/ethereum-devs-open-fusaka-upgrade-to-2-million-security-audit-contest
+- Sharplink ETH treasury now at $3.8B <!-- Link TK -->
+- New TikTok deal? <!-- As of Monday, NPR reporting there's progress toward a US sale. Check back for updates. -->
+- BOE is planning to limit stablecoin ownership in the UK. <!-- FT link TK -->
+- Malta opposes centralization of EU crypto regulation. <!-- link tk -->
+- NYT on WH's chip and crypto-related dealings with UAE: https://news.google.com/read/CBMikwFBVV95cUxQR0RFR3gzM0VGYnRCRWZFSlJCVjJVRlZuWHRTNktOSzgxQTBTSTFjV0xzb3M4aTRIeUE3MC1fTTlBSTZXT2VzNXRMYUdUNXFlRGFkY254VmJYRlZOUW9ad0tEZW5NRnVQbE1Lc2J6dHhUWnctNW1yeVpKWGYzaHVaRTNxOW1leVRmY2UwdWVHY2phSWc?hl=en-US&gl=US&ceid=US%3Aen
+
+
+
+- Trump suit against NYT: https://decrypt.co/339768/president-trump-alleges-new-york-times-harmed-meme-coin-15-billion-lawsuit
+- Tether Launching new US stablecoin USAT <!-- Link TK -->
+- Gemini dethroned ChatGPT in Apple's mobile App Store for the first time. <!-- Link TK -->
+- Possible Discord confession by Kirk shooter: https://www.washingtonpost.com/investigations/2025/09/15/charlie-kirk-shooter-suspect-discord-chat/
+- Coinbase: Clarity Act is probably dead. <!-- Link TK -->
+- Lobbying for bill that would create US crypto reserve: https://www.theblock.co/post/370742/strategy-co-founder-michael-saylor-and-other-crypto-execs-join-lawmakers-in-washington-to-advance-strategic-bitcoin-reserve-bill
+- Gemini nears settlement of long-running lawsuit with the SEC. https://www.theblock.co/post/370764/sec-winklevoss-twins-gemini-resolution-lawsuit-gemini-earn
+- Polymarket is launching probability trading on earnings of US companies: https://www.theblock.co/post/370819/polymarket-adds-company-earnings-forecasts
 
 ### Market Snapshot
 
@@ -124,17 +139,21 @@ Some leftover notes, links from last week...
 
 ### Looking Ahead
 
-- tk
-
 - Travel platforms are worried about AI agents. https://www.ft.com/content/4d1acaff-07e4-4739-9ea4-5c6cba553e74 <!-- Sub out Google News referral link -->
 
 - In order to survive, web3 must embrace web2. ([Cointelegraph](https://cointelegraph.com/news/web3-rely-on-web2))
 
-### Odds & Ends
-
 - Modular homes: https://slate.com/business/2025/09/modular-housing-apartments-boston-reframe.html
 
-- A new study suggests that even a single exercise session could slow the growth of cancer cels. ([Washington Post](https://www.washingtonpost.com/wellness/2025/09/11/exercise-cancer-benefits-prevention-recurrence/))
+### Odds & Ends
+
+- B&W phone screens: A riff...
+- New Girl Scout cookies introduced. <!-- Link TK -->
+
+- Aufguss https://slate.com/life/2025/09/sauna-benefits-bathhouse-popularity-united-states.html
+
+- A new study suggests that even a single exercise session could slow the growth of cancer cells. ([Washington Post](https://www.washingtonpost.com/wellness/2025/09/11/exercise-cancer-benefits-prevention-recurrence/))
+
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
