--- a/2025/2025-09-21-wir.md
+++ b/2025/2025-09-21-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTK
+# Emerging tech for the rest
+## As America cracks up, enabled by misanthropic oligarchs in Silicon Valley, it's time to look elsewhere for hope.
 
 ![A lone tangerine against an aqua-colored background](https://w3w.news/img/mae-wu-1920.jpg)
 *Photo illustration by Mae Wu via Unsplash*
@@ -14,7 +14,40 @@
 
 <hr>
 
-**Lead item goes here.** Yadda yadda yadda.
+**Is it possible to rant and be optimistic at the same time?** I'm going to try here.
+
+America is now a political and economic oligarchy, embodied most explicitly by our tech sector.
+
+CBS kowtowed to get a merger done, and now so are ABC and the affiliates.
+
+How long have people been complaining about media mergers?
+
+Lack of thinking two steps ahead.
+
+Intel/Nvidia: More evidence of oligarchy
+
+corporate and government power coming together...
+
+Palantir
+
+Examples of global collaboration I've participated firsthand: Multiple immigrants. Colleagues Moldova, Finland, Australia, Kenya, Italy, France, India. TF in London. Capsule Team in Paris. Ukrainian writers. WEF in Geneva.
+
+
+
+
+iShares MSCI ACWI ex US ACWX
+
+
+
+Home bias
+
+((Good Galloway quote ~25 mins into latest episode.))
+
+Mofos not reading.
+
+I don't feel like writing about politics anymore. But I keep feeling like it's necessary.
+
+To paraphrase Bruce Lee, the best platform is no platform. Their algos suck. Their executives suck. The end.
 
 <!--
 
