Adding weekly, YTD market moves

--- a/2025/2025-09-28-wir.md
+++ b/2025/2025-09-28-wir.md
@@ -54,20 +54,20 @@
     <tr>
       <td><a href="https://coinmarketcap.com/currencies/bitcoin/">Bitcoin</a></td>
       <td>$109,237.96</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>-5.2%</td>
+      <td>+16.4%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF">Gold</a></td>
       <td>$3,789.80/oz</td>
-      <td>+%</td>
-      <td>+%</td>
-    </tr>    
+      <td>+3.2%</td>
+      <td>+44.1%</td>
+    </tr>        
     <tr>
       <td><a href="https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch">USD Index</a></td>
       <td>98.18</td>
-      <td>-%</td>
-      <td>-%</td>
+      <td>+0.6%</td>
+      <td>-9.5%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ETNX/">10-yr U.S. <br>Treasury Yield</a></td>
@@ -78,14 +78,14 @@
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ENDX/components?p=%255ENDX">Nasdaq 100</a></td>
       <td>24,503.85</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>-0.5%</td>
+      <td>+16.6%</td>
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
       <td>1,048.99</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>-0.7%</td>
+      <td>+25.1%</td>
     </tr>
   </tbody>
 </table>
@@ -96,7 +96,7 @@
 
 - Web3's growth depends on strategic integration with existing Web2 systems rather than replacing them, as highlighted by Richard Johnson of Data Guardians Network, who argues that leveraging Web2's established infrastructure can help overcome barriers to mass adoption and drive innovation. ([Cointelegraph](https://cointelegraph.com/news/web3-rely-on-web2)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- **Turnabout is fair play.** Travel sites like Booking.com, Expedia, and Airbnb, which once put scores of human travel agents out of business, are now working to avoid being replaced by AI agents. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen))
+- **Turnabout is fair play.** Travel sites like Booking.com, Expedia, and Airbnb, which once put scores of human travel agents out of business, are now working to avoid being replaced themselves by AI agents. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE9nc2tGV0tieE1aZFplam9tNW81WWMydGV3UHVicnZ6bTExcXQ0TFN4dll3NjBsYUtGUGI4Q3lWdVlpa29XQUtFMUdNRDB5WVBvRkJ6bGYtd2dINWY2NThySW82SnQ0aVJ6VnMya1d6WS0?hl=en-US&gl=US&ceid=US%3Aen))
 
 ### Odds & Ends
 
