--- a/2025/2025-09-28-wir.md
+++ b/2025/2025-09-28-wir.md
@@ -1,8 +1,8 @@
 # TKTK
 ## TKTK
 
-![User holding a smartphone](https://w3w.news/img/phoneuser-yura-fresh-1920.jpg)
-*Photo by Yura Fresh via Unsplash*
+![Closeup of typewriter letters](https://w3w.news/img/csabi-elter-unsplash-3000.jpg)
+*Photo by Csabi Elter via [Unsplash](https://unsplash.com/@bulgakovmihaly)*
 
 <hr>
 
@@ -15,7 +15,6 @@
 <hr>
 
 **Lead item goes here.** Yadda yadda yadda
-
 
 ### Week in Review: Sept. 21-27, 2025
 
